--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "your-movie-list",
   "private": true,
   "version": "0.0.0",
+  "proxy": "http://localhost:3000",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -11,14 +12,19 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.3.0",
     "nodemon": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
     "react-router": "^6.20.1",
     "react-router-dom": "^6.20.1",
+    "react-toastify": "^9.1.3",
     "redux": "^5.0.0",
     "sass": "^1.69.5"
   },
